@@ -1,3 +1,6 @@
+2019-08-05  Pumidon Phathong <pumidon@hot-now.com>
+ Add sloppy json parser.
+
 2019-07-01  Pattarawut Imamnuaysup  <kiraskylolax@gmail.com>
  Add trim function for f5::u8view.
 
